--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   },
   "dependencies": {
     "@google-cloud/text-to-speech": "^4.2.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "gtts": "^0.2.1",
-    "say": "^0.16.0"
+    "uuid": "^9.0.0"
   }
 }
